--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td>
-                <img src="D:\zhanghu\OneDrive\桌面\web夹\微信图片_20230413205420_看图王.jpg""alt="这是我的第一个头像"
+                <img src="https://img.wxcha.com/m00/2f/53/1ec03bf507ce6aba9a2bb35f1cccf7a9.jpg?down""alt="这是我的第一个头像"
             </td>
             <td>
                 <h1>
